# Flight-finder

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
flightfinder/: amadeus.py  cli.py  config.py  flights.py  models.py  search.py  storage.py  web.py
flightfinder/static/: style.css
flightfinder/templates/: base.html  index.html  trip.html
systemd/: flightfinder.service  flightfinder.timer
tests/: test_amadeus.py  test_config.py  test_flights.py  test_search.py  test_storage.py
